// Floating Temple
// Copyright 2015 Derek S. Snyder
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import "peer/proto/uuid.proto";
import "peer/proto/value_proto.proto";

package floating_temple.peer;

message ObjectCreationEventProto {
  required bytes data = 1;
  repeated floating_temple.peer.Uuid referenced_object_id = 2;
}

message BeginTransactionEventProto {
}

message EndTransactionEventProto {
}

message MethodCallEventProto {
  // TODO(dss): Allow a method execution to directly read or write the state of
  // multiple objects. (E.g., in Python, the rich comparison operations read the
  // state of two different objects.)
  required string method_name = 1;
  repeated floating_temple.peer.ValueProto parameter = 2;
  optional floating_temple.peer.Uuid caller_object_id = 3;
}

message MethodReturnEventProto {
  required floating_temple.peer.ValueProto return_value = 1;
  optional floating_temple.peer.Uuid caller_object_id = 2;
}

message SubMethodCallEventProto {
  required string method_name = 1;
  repeated floating_temple.peer.ValueProto parameter = 2;
  required floating_temple.peer.Uuid callee_object_id = 3;
}

message SubMethodReturnEventProto {
  required floating_temple.peer.ValueProto return_value = 1;
  required floating_temple.peer.Uuid callee_object_id = 2;
}

message SelfMethodCallEventProto {
  required string method_name = 1;
  repeated floating_temple.peer.ValueProto parameter = 2;
}

message SelfMethodReturnEventProto {
  required floating_temple.peer.ValueProto return_value = 1;
}

message EventProto {
  enum Type {
    UNKNOWN = 0;

    OBJECT_CREATION = 1;
    BEGIN_TRANSACTION = 2;
    END_TRANSACTION = 3;
    METHOD_CALL = 4;
    METHOD_RETURN = 5;
    SUB_METHOD_CALL = 6;
    SUB_METHOD_RETURN = 7;
    SELF_METHOD_CALL = 8;
    SELF_METHOD_RETURN = 9;
  }

  // Exactly one of the following fields must be set.
  optional floating_temple.peer.ObjectCreationEventProto object_creation = 1;
  optional floating_temple.peer.BeginTransactionEventProto
      begin_transaction = 2;
  optional floating_temple.peer.EndTransactionEventProto end_transaction = 3;
  optional floating_temple.peer.MethodCallEventProto method_call = 4;
  optional floating_temple.peer.MethodReturnEventProto method_return = 5;
  optional floating_temple.peer.SubMethodCallEventProto sub_method_call = 6;
  optional floating_temple.peer.SubMethodReturnEventProto sub_method_return = 7;
  optional floating_temple.peer.SelfMethodCallEventProto self_method_call = 8;
  optional floating_temple.peer.SelfMethodReturnEventProto
      self_method_return = 9;

  repeated floating_temple.peer.Uuid new_object_id = 10;
}
